src/main/resources/static/css/centigrade.css
/* ... */
.logo-container img {
    height: 60%;
    width: auto;
    position: absolute;
    top: 20%;
    padding: 0.625em;
}

#navbarContent ul {
    width: 90%;
}

#search-form {
    width: 60%;
    height: 100%;
    position: relative;
    justify-content: flex-end;
    display: flex;
}

#search-form input[type=search] {
    width: 75%;
    height: 30px;
    justify-content: flex-end;
    box-sizing: border-box;
    border: 1px solid rgba(255, 255, 255, 0.75);
    padding-left: 0.625em;
    border-top-left-radius: 1.25em;
    border-bottom-left-radius: 1.25em;
    background-color: white;
    -webkit-transition: all 0.6s ease-in-out;
    -o-transition: all 0.6s ease-in-out;
    transition: all 0.6s ease-in-out;
}

#search-form input[type=search]:focus {
    width: 85%;
    outline: none;
}

#search-form button {
    text-decoration: none;
    display: inline;
    cursor: pointer;
    height: 30px;
    background-color: white;
    border: none;
    padding-right: 0.625em;
    padding-left: 0.625em;
    border-top-right-radius: 1.25em;
    border-bottom-right-radius: 1.25em;
    -webkit-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
}

#search-form button:hover {
    background: rgba(255, 255, 255, 0.75);
    color: white;
}

#header {
    max-height: 100vh;
    width: 100%;
    overflow: hidden;
}

#header .carousel-item {
    overflow: hidden;
    height: 100vh;
}

#header .carousel-item .carousel-caption {
    width: 100%;
    right: 0;
    left: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.4);
    padding: 2em;
}

.carousel-item .carousel-caption {
    text-align: left;
}

#header .carousel-item img {
    min-height: 100vh;
    width: auto;
}

#featured-section, #critic-section {
    width: 100%;
    background: #F2F2F2;
    text-align: center;
    position: relative;
    display: table;
    min-height: 50vh;
    padding: 2em 0 2em 0;
}

#featured-section a {
    position: relative;
    width: 90%;
    height: 50vh;
    text-align: center;
    display: block;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7)), url('../img/layout/featured.svg') bottom no-repeat;
    background-size: cover;
    color: white;
    vertical-align: middle;
    -webkit-transition: all 0.2s ease-in;
    -o-transition: all 0.2s ease-in;
    transition: all 0.2s ease-in;
}

#featured-section a:hover {
    text-decoration: none;
    box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
    -webkit-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
    -moz-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
    -ms-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
    -o-box-shadow: 0px 0px 15px 5px rgba(0, 0, 0, 0.2);
}

#featured {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 100%;
}

#featured div {
    -webkit-flex: 1 1 auto;
    -moz-flex: 1 1 auto;
    -ms-flex: 1 1 auto;
    -o-flex: 1 1 auto;
    flex: 1 1 auto;
    height: 100%;
    padding: 1em 1em 1em 2em;
    position: relative;
    text-align: left;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

#featured div img {
    position: relative;
    height: 100%;
    width: auto;
}

#critic-section #becomeacritic {
    height: 50vh;
    width: 90%;
    position: relative;
    color: white;
    background: linear-gradient(to top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.7)), url('../img/layout/critic%20(1).svg') bottom no-repeat;
    background-size: cover;
}

#signup, #signin {
    position: relative;
    display: block;
    width: 100%;
}

#register-div, #signin-div {
    position: relative;
    display: flex;
    justify-content: flex-start;
    flex-wrap: wrap;
    width: 100%;
}

#register-div .alert {
    width: 80%;
    margin-top: 2em;
}

#hasaccount {
    position: relative;
    width: 39%;
    height: 50vh;
    text-align: center;
    display: flex;
    color: firebrick;
    flex-direction: column;
    justify-content: center;
    margin: 0 auto;
}

#hasaccount * {
    margin: 0 auto;
}

#hasaccount div {
    display: flex;
    flex-direction: column;
    position: relative;
    height: 100%;
    width: 100%;
    top: 15vh;
}

#hasaccount h3 {
    position: relative;
    height: 20%;
    line-height: 20%;
}

#hasaccount div h6 {
    height: 10%;
    line-height: 10%;
}

#hasaccount a {
    position: relative;
    padding: 1.25em;
    width: 50%;
    text-decoration: none;
    color: white;
    border-radius: 1em;
    background: firebrick;
    border: 1px solid firebrick;
    vertical-align: middle;
    letter-spacing: 2px;
    -webkit-box-shadow: 0px 3px 1px 2px rgba(11, 60, 93, 0.2);
    box-shadow: 0px 3px 1px 2px rgba(11, 60, 93, 0.2);
    -ms-box-shadow: 0px 3px 1px 2px rgba(11, 60, 93, 0.2);
    -moz-box-shadow: 0px 3px 1px 2px rgba(11, 60, 93, 0.2);
    -o-box-shadow: 0px 3px 1px 2px rgba(11, 60, 93, 0.2);
    -webkit-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

#hasaccount a:hover {
    color: firebrick;
    border: 1px solid firebrick;
    background: transparent;
}

#signup #intro, #signin #intro {
    position: relative;
    text-align: center;
    width: 100%;
    display: flex;
    flex-direction: column;
    color: firebrick;
    padding-top: 2em;
    padding-bottom: 2em;
}

#intro img {
    height: 8vh;
    width: 80px;
    -webkit-flex: 1;
    -moz-flex: 1;
    -ms-flex: 1;
    -o-flex: 1;
    flex: 1;
    position: relative;
    left: 50%;
    transform: translateX(-50%);
}

#intro span {
    color: firebrick;
}

#form {
    width: 60%;
    position: relative;
    padding-bottom: 2em;
}

#form #house {
    height: 25vh;
    max-height: 300px;
    text-align: center;
}
/* ... */

